fixed "too much recursion", added filter button, added props to have selected and highlighted error bar colors matching marker, other bug fixes

--- a/src/firefly/js/charts/ui/ChartPanel.css
+++ b/src/firefly/js/charts/ui/ChartPanel.css
@@ -119,6 +119,10 @@
     background-image: url("/images/icons-2014/select.png");
 }
 
+.ChartToolbar__tblfilters {
+    background-image: url("/images/icons-2014/24x24_Filter.png");
+}
+
 .ChartToolbar__options {
     background-image: url("/images/icons-2014/24x24_GearsNEW.png");
 }
